--- a/browserAction/style.css
+++ b/browserAction/style.css
@@ -1,3 +1,11 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
-  font-style: italic;
+  font-style: bold;
+}
+
+button {
+  padding: 3px 5px;
 }
