Style after install page

--- a/views/installed.html
+++ b/views/installed.html
@@ -3,25 +3,31 @@
   <head>
     <meta charset="utf-8" />
     <link href="../photon/index.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <img src="../icons/bell-96.png" alt="Application logo" />
-    <h1 data-i18n-msg="extensionName">Shklanky</h1>
-    <h2>Wszystko gotowe!</h2>
-    <p>
-      Będziemy teraz wybijać szklanki w systemie czterogodzinnym (bez dwugodzinnych psich wacht). Wszystkie ustawienia
-      są dostępne po kliknięciu w ikonę rozszerzenia - szukaj dzwonu okrętowego w prawym górnym rogu przeglądarki. Ta
-      sama ikona jest wyświetlana na szaro kiedy wybijanie godziny jest wstrzymane.
-    </p>
-    <figure>
-      <img src="icon-location.png" alt="Icon location in the toolbar" />
-      <figcaption>Lokalizacja ikony na pasku narzędzi</figcaption>
-    </figure>
-    <p>
-      <span>Dzięki za instalację 😊, gdyby były jakieś skargi / wnioski / zażalenia zapraszam do zgłaszania ich w</span>
-      <a href="https://github.com/Maarrk/shklanky/issues">repozytorium</a>.
-    </p>
-    <h3>Pomyślnych wiatrów i stopy wody pod kilem!</h3>
+    <div class="content">
+      <div class="title-container">
+        <img src="../icons/bell-96.png" alt="Application logo" />
+        <h1 data-i18n-msg="extensionName">Shklanky</h1>
+      </div>
+      <h2>Wszystko gotowe!</h2>
+      <p>Będziemy teraz wybijać szklanki w systemie czterogodzinnym (bez dwugodzinnych psich wacht).</p>
+      <p>
+        Wszystkie ustawienia są dostępne po kliknięciu w ikonę rozszerzenia - szukaj dzwonu okrętowego w prawym górnym
+        rogu przeglądarki. Ta sama ikona jest wyświetlana na szaro kiedy wybijanie godziny jest wstrzymane.
+      </p>
+      <figure>
+        <img src="icon-location.png" alt="Icon location in the toolbar" />
+        <figcaption class="caption">Lokalizacja ikony na pasku narzędzi</figcaption>
+      </figure>
+      <p>
+        <span>Dzięki za instalację.</span>😊
+        <span>Gdyby były jakieś skargi / wnioski / zażalenia zapraszam do zgłaszania ich w</span>
+        <a class="link link--external" href="https://github.com/Maarrk/shklanky/issues">repozytorium</a>.
+      </p>
+      <h3>Pomyślnych wiatrów i stopy wody pod kilem!</h3>
+    </div>
     <script src="../localize.js"></script>
   </body>
 </html>
