Localize after install page

--- a/views/installed.html
+++ b/views/installed.html
@@ -11,22 +11,30 @@
         <img src="../icons/bell-96.png" alt="Application logo" />
         <h1 data-i18n-msg="extensionName">Shklanky</h1>
       </div>
-      <h2>Wszystko gotowe!</h2>
-      <p>Będziemy teraz wybijać szklanki w systemie czterogodzinnym (bez dwugodzinnych psich wacht).</p>
-      <p>
-        Wszystkie ustawienia są dostępne po kliknięciu w ikonę rozszerzenia - szukaj dzwonu okrętowego w prawym górnym
-        rogu przeglądarki. Ta sama ikona jest wyświetlana na szaro kiedy wybijanie godziny jest wstrzymane.
+      <h2 data-i18n-msg="installReady">All's ready!</h2>
+      <p data-i18n-msg="installWatchSystem">
+        We'll now be watchkeeping in the simple system (with no two-hour dog watches).
+      </p>
+      <p data-i18n-msg="installIconDescription">
+        All settings are available after clicking the extension's icon - look for a ship's bell in the top right corner
+        of your browser. The same icon is displayed in gray when the extension is muted.
       </p>
       <figure>
         <img src="icon-location.png" alt="Icon location in the toolbar" />
-        <figcaption class="caption">Lokalizacja ikony na pasku narzędzi</figcaption>
+        <figcaption class="caption" data-i18n-msg="installIconScreenshotCaption">
+          Icon location in the toolbar
+        </figcaption>
       </figure>
       <p>
-        <span>Dzięki za instalację.</span>😊
-        <span>Gdyby były jakieś skargi / wnioski / zażalenia zapraszam do zgłaszania ich w</span>
-        <a class="link link--external" href="https://github.com/Maarrk/shklanky/issues">repozytorium</a>.
+        <span data-i18n-msg="installThanks">Thanks for installing.</span>😊
+        <span data-i18n-msg="installReport">
+          If you have any issues or suggestions, I invite you to report them in
+        </span>
+        <a class="link link--external" href="https://github.com/Maarrk/shklanky/issues" data-i18n-msg="installRepoName">
+          the repository</a
+        >.
       </p>
-      <h3>Pomyślnych wiatrów i stopy wody pod kilem!</h3>
+      <h3 data-i18n-msg="installGoodbye">May you have fair winds and following seas!</h3>
     </div>
     <script src="../localize.js"></script>
   </body>
